--- a/django_basico/projeto_dipeq/Template/css/login.css
+++ b/django_basico/projeto_dipeq/Template/css/login.css
@@ -7,7 +7,17 @@
 body {
     color: #839E65;
     display: flex;
+    height: 120%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#fundo_login{
+
+    height: 100%;
+}
+
+#fundo-login figure img{
+    width: 120%;
 }
 
 #formulario{
